kubernetes2.yaml
#############
# Namespace #
#############
---
apiVersion: v1
kind: Namespace
metadata:
  name: cargo-live-demo



#################
# Web Container #
#################
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: web
  name: web
  namespace: cargo-live-demo
spec:
  ports:
  - name: "http"
    port: 8088
    targetPort: 8088
  selector:
    app: web
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: web
  name: web
  namespace: cargo-live-demo
spec:
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: web
  template:
    metadata:
      labels:
        app: web
    spec:
      containers:
      - name: web
        image: joschi36/cargo-demo:latest
        ports:
        - containerPort: 8088
      restartPolicy: Always
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: web
  namespace: cargo-live-demo
  annotations:
    traefik.ingress.kubernetes.io/redirect-entry-point: https
spec:
  rules:
  - host: livedemo-cargo.swisstxt.ch
    http:
      paths:
      - path: /
        backend:
          serviceName: web
          servicePort: 8088



#########
# REDIS #
#########
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: redis
  name: redis
  namespace: cargo-live-demo
spec:
  ports:
  - name: "6379"
    port: 6379
    targetPort: 6379
  selector:
    app: redis
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: redis
  name: redis
  namespace: cargo-live-demo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redis
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: redis
    spec:
      containers:
      - image: bitnami/redis
        name: redis
        ports:
        - containerPort: 6379
        volumeMounts:
        - mountPath: /bitnami/redis/data
          name: redis-claim
      restartPolicy: Always
      volumes:
      - name: redis-claim
        emptyDir: {}
